--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 CavyLite
 
-Cavy Framework is a PHP framework modified from Zend Framework.
-These frameworks are excellent php framework, however, these frameworks are very large, weight, and complex.
+There are many php frameworks, excellent framework, however, very large, weight, and complex.
 I need a lightweight framework to replace them in my project.
 
+CavyLite Framework is a PHP framework likes Zend
